--- a/13_Assignment_html-&-js/03-background-changer/background-iter.html
+++ b/13_Assignment_html-&-js/03-background-changer/background-iter.html
@@ -13,11 +13,12 @@
     </div>
    <!-- </style> -->
     <script type="text/javascript">
-        var background = ["150611A-Sagan.jpg", "USS_Pittsburgh_(CA-72)_underway_after_she_lost_her_bow_in_June_1945.jpg", "back-to-the-future-delorean.jpg"];
-        var randomQuotes = [" This is the face of a man that shot an hyper-dimensional enity from outside time and space that was intersecting our reality via thousands of iterations, in the face, with a science gun.", " U.S.N. Damage Control back in WW2 truly was OP in every sense of the phrase.", "           * Huey Lewis & The News INTENSIFIES *"];
+        /*add more pictures? */
+        var background = ["150611A-Sagan.jpg", "USS_Pittsburgh_(CA-72)_underway_after_she_lost_her_bow_in_June_1945.jpg", "back-to-the-future-delorean.jpg", "IMG_2967.PNG"];
+        var randomQuotes = [" This is the face of a man that shot an hyper-dimensional enity from outside time and space that was intersecting our reality via thousands of iterations, in the face, with a science gun.", " U.S.N. Damage Control back in WW2 truly was OP in every sense of the phrase.", "  * Huey Lewis & The News INTENSIFIES *", "OH GOD, WHO TOUCHED YANG'S HAIR?!?"];
         var currIndex = 0;
         window.setInterval(function(){
-            currIndex = (currIndex + 1) % 3;
+            currIndex = (currIndex + 1) % 4;
             var val = background[currIndex];
             document.body.style.backgroundImage = "url(' "+val+" ')";
             <!--document.getElementById("background").innerHTML = randomQuotes[currIndex];-->
